# ai_novel_flow_1

./: .gitignore  README.md  pyproject.toml
src/ai_novel_flow_1/: main.py  types.py
src/ai_novel_flow_1/crews/chapter_writer_crew/: chapter_writer_crew.py
src/ai_novel_flow_1/crews/chapter_writer_crew/config/: agents.yaml  tasks.yaml
src/ai_novel_flow_1/crews/novel_outline_crew/: novel_outline_crew.py
src/ai_novel_flow_1/crews/novel_outline_crew/config/: agents.yaml  tasks.yaml
src/ai_novel_flow_1/data/: reference_novels.py
