[project]
name = "ai_novel_flow_1"
version = "0.1.0"
description = "ai_novel_flow_1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

[project.scripts]
kickoff = "ai_novel_flow_1.main:kickoff"
plot = "ai_novel_flow_1.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
